# VCF-Arrow

./: Cargo.toml  README.md  README_zh.md
src/: error.rs  lib.rs  vcf.rs
src/vcf/: builders.rs  mod.rs  reader.rs  types.rs
